[package]
name = "nfc-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["sync", "rt-multi-thread"] }
async-stream = "0.3.5"
futures = "0.3.28"
pcsc = "2.8.0"
tracing = "0.1.38"
